# permatracks

./: .gitmodules  CMakeLists.txt  README.md  platformio.ini
calibration/: CMakeLists.txt  calibration.py
calibration/include/: MagneticFluxDensityDataTransformation.h
calibration/scripts/: calibrate.py  calibration.py
calibration/src/: MagneticFluxDensityDataTransformation.cpp
calibration/test/: test_read_calibration.cpp
data_collection/: CMakeLists.txt  collect_medability_sensor_array_data.py
data_collection/include/: CSVMagnetometerArrayMagneticFluxDensityDataPositionDirectionReader.h  CSVMagnetometerArrayMagneticFluxDensityDataReader.h  CSVMagnetometerArrayReader.h  MedabilityMagnetometerArrayTransformer.h
data_collection/scripts/: collect_medability_sensor_array_data.py
data_collection/src/: CSVMagnetometerArrayMagneticFluxDensityDataPositionDirectionReader.cpp  CSVMagnetometerArrayMagneticFluxDensityDataReader.cpp  CSVMagnetometerArrayReader.cpp  MagnetometerArraySerialConnection.cpp  MedabilityMagnetometerArrayTransformer.cpp
data_collection/test/: test_data_collection.cpp
include/: MagnetometerArrayMagneticFluxDensityDataFilePrinter.h  MagnetometerArrayMagneticFluxDensityDataPrinter.h  MagnetometerArraySerialConnection.h  MultiSensorMagneticFluxDensityDataFilePrinter.h  RawMagnetometerArrayOutput2MagneticFluxDensityData.h  SerialConnection.h
knowledge/: DIstanceMeasurements.md  Sensors.md
measurements/: CalibrationBoard.FCStd  create_measurement_circles.py
measurements/array/: LH_calibration_board.3mf  LH_magnet_vessel.gcode.3mf  LIS3MDL_ARRAY.m  MagnetVessel.FCStd  multiple_plot.m  ransac.py
measurements/distance_measurements/: distances_lis3mdl.json  show_results.m  show_results.py
measurements/distance_measurements/results/LIS3MDL/: mag_data_LIS3MDL_2025Feb25_13h29min24s_360mm.txt  mag_data_LIS3MDL_2025Feb25_13h29min54s_330mm.txt  mag_data_LIS3MDL_2025Feb25_13h30min25s_300mm.txt  mag_data_LIS3MDL_2025Feb25_13h30min59s_270mm.txt  mag_data_LIS3MDL_2025Feb25_13h31min38s_240mm.txt  mag_data_LIS3MDL_2025Feb25_13h32min25s_210mm.txt  mag_data_LIS3MDL_2025Feb25_13h32min57s_180mm.txt  mag_data_LIS3MDL_2025Feb25_13h33min33s_150mm.txt  mag_data_LIS3MDL_2025Feb25_13h34min12s_120mm.txt  mag_data_LIS3MDL_2025Feb25_13h34min46s_90mm.txt  mag_data_LIS3MDL_2025Feb25_13h35min25s_60mm.txt  mag_data_LIS3MDL_2025Feb25_13h36min10s_45mm.txt
measurements/distance_measurements/results/MLX90393/: mag_data_MLX90393_2025Feb25_17h5min33s_360mm.txt  mag_data_MLX90393_2025Feb25_17h5min47s_330mm.txt  mag_data_MLX90393_2025Feb25_17h6min0s_300mm.txt  mag_data_MLX90393_2025Feb25_17h6min11s_270mm.txt  mag_data_MLX90393_2025Feb25_17h6min22s_240mm.txt  mag_data_MLX90393_2025Feb25_17h6min33s_210mm.txt  mag_data_MLX90393_2025Feb25_17h6min48s_180mm.txt  mag_data_MLX90393_2025Feb25_17h7min16s_120mm.txt  mag_data_MLX90393_2025Feb25_17h7min30s_90mm.txt  mag_data_MLX90393_2025Feb25_17h7min44s_60mm.txt  mag_data_MLX90393_2025Feb25_17h7min4s_150mm.txt  mag_data_MLX90393_2025Feb25_17h8min0s_45mm.txt  mag_data_MLX90393_2025Feb25_17h8min14s_30mm.txt
measurements/filtering/: fft_test.m  filtering.mlx
measurements/repeatability/: MMC5983MA.m  MMC5983MAWiederholbarkeitsmessungMagnetsensor.mlx  WiederholbarkeitsmessungMagnetsensor.mlx  WiederholbarkeitsmessungMagnetsensorLIS3MDL.mlx  WiederholbarkeitsmessungMagnetsensorMMC5983MA.mlx  repeatability.mlx
meetings/matlab_codegen_vs_sympy/: CMakeLists.txt  dipol_model.cpp  dipol_model.h  matlab_codegen_vs_sympy.cpp  model.m  model_jacobian.m  sensor_array_dipol_model.c  sensor_array_dipol_model.h  sensor_array_dipol_model.m
meetings/sympy_compile_example/: sympy_compile_example.ipynb  sympy_compile_example.py
msg/: CMakeLists.txt  MagneticFluxDensityData.h
msg/include/: Direction.h  MagneticFluxDensityData.h  Message.h  Position.h
msg/src/: MagneticFluxDensityData.cpp  Message.cpp
optimization/: CMakeLists.txt  models.py  optimization_problem.py  optimization_test.py
optimization/include/: LevenbergMarquardtOptimizer.h  MultiStartLevenbergMarquardtOptimizer.h  PowellsDogLegOptimizer.h
optimization/scripts/: compile_to_cpp.py  models.py  optimization_problem.py  optimization_test.py  ransac_optimization.py
optimization/src/: LevenbergMarquardtOptimizer.cpp  MultiStartLevenbergMarquardtOptimizer.cpp  PowellsDogLegOptimizer.cpp
optimization/test/: test_dipol_model_optimization.cpp  test_optimization.cpp
result/: mag_data_2025Feb19_9h30min1s  mag_data_LIS3MDL_2025Feb25_14h35min42s_calibration.txt  mag_data_LIS3MDL_ARRAY_mean_2025Mar14_15h26min51s_calibration_x.txt  mag_data_LIS3MDL_ARRAY_mean_2025Mar14_15h32min12s_(1-10_3).txt  mag_data_LIS3MDL_ARRAY_mean_2025Mar14_15h39min41s_calibration_y.txt  mag_data_LIS3MDL_ARRAY_mean_2025Mar14_15h45min44s_calibration_z.txt  mag_data_MLX90393_2025Feb25_14h54min15s_calibration.txt  mag_data_MMC5603_2025Feb25_16h52min3s_calibration.txt  mag_data_MMC5983MA_2025Feb25_17h13min41s_calibration.txt
src/: calc_hard_and_soft_iron_offsets.cpp  main-nucleo.cpp  main-phoenix.cpp  main.cpp
test/: calc_hard_and_soft_iron_offsets.cpp  calibrate_and_grab_mag_data_array.cpp  calibrate_array.cpp  grab_gound_truth_mag_data_array.cpp  grab_mag_data.cpp  grab_mag_data_array.cpp  grab_mag_data_esp32.cpp  test_averager.cpp  test_magneto.c
utils/: CMakeLists.txt
utils/include/: AfterReturnTimeMeasure.h  MagnetometerArrayMagneticFluxDensityDataAverager.h  UpdaterMagnetometerArrayMagneticFluxDensityDataToMagnetometerArrayMagneticFluxDensityDataWithTruePositionDirection.h  linspace.h
utils/test/: test_eigen_utils.cpp
visualization/: CMakeLists.txt
visualization/include/: MagnetometerArrayMagneticFluxDensityDataPrinter.h  PositionDirectionError.h  PositionDirectionFilePrinter.h  PositionDirectionPrinter.h
visualization/scripts/: plot_optimization_error.py
visualization/src/: MagnetometerArrayMagneticFluxDensityDataPrinter.cpp  PositionDirectionError.cpp  PositionDirectionFilePrinter.cpp  PositionDirectionPrinter.cpp
(+37 files in other folders)
